[package]
name = "egui-theme"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = {version = "0.31.1", optional = true}
egui = {version = "0.31.1"}
serde_json = {version = "1.0.135", optional = true}
serde = { version = "1.0.217", features = ["derive"], optional = true}

[dev-dependencies]
eframe = "0.31.1"
egui = {version = "0.31.1", features = ["serde"]}
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["demo"]

[features]
serde = ["dep:serde_json", "dep:serde"]
demo = ["dep:eframe"]